--- a/AssetEngine/AssetEngine.vcxproj.filters
+++ b/AssetEngine/AssetEngine.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="IAsset.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AssetTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
